config-root/namespaces/jx-staging/aspnet-quickstart-test/aspnet-quickstart-test-aspnet-quickstart-test-deploy.yaml
# Source: aspnet-quickstart-test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aspnet-quickstart-test-aspnet-quickstart-test
  labels:
    draft: draft-app
    chart: "aspnet-quickstart-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'aspnet-quickstart-test'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-staging
spec:
  selector:
    matchLabels:
      app: aspnet-quickstart-test-aspnet-quickstart-test
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: aspnet-quickstart-test-aspnet-quickstart-test
    spec:
      serviceAccountName: aspnet-quickstart-test-aspnet-quickstart-test
      containers:
      - name: aspnet-quickstart-test
        image: "gcr.io/driven-reef-369119/aspnet-quickstart-test:0.0.1"
        imagePullPolicy: IfNotPresent
        envFrom: null
        ports:
        - name: http
          containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 60
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: 400m
            memory: 256Mi
          requests:
            cpu: 200m
            memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
